# telegram-export

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: commands.md  json-schema.md
tg_export/: __main__.py  cli.py  client.py  config.py  schemas.py  serializers.py  utils.py
tg_export/commands/: analyze.py  auth.py  channel_check.py  channel_export.py  channel_stats.py  download_media.py  export.py  setup.py  update.py
